rules/ensure_network_policy_configured_in_labels/test/success_pod_ccnp_namespace_selector/input/cilium_clusterwide_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: my-ns-ingress-allowlist
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: my-ns
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: other-ns
