rules/ensure_network_policy_configured_in_labels/test/success_pod_ccnp_namespace_selector/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: my-ns
  labels:
    app: my-app
spec:
  containers:
  - name: my-app
    image: nginx
